# farpenpy

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/farpenpy/: __init__.py  farpen.py  logger.py
src/farpenpy/subreports/: __init__.py  apportionment.py
tests/: test_farpen.py
